# mlx-soloheaven

./: .env.example  .gitignore  LICENSE  README.md  bench_kv_bits.py  bench_pld.py  bench_realistic_demote.py  bench_stream_overlap.py  bench_stream_overlap2.py  pyproject.toml  start.sh  start_3models.sh  start_3models_b.sh  start_gemma4.sh  start_glm4.7.sh  start_glm5.1.sh  start_minimax.sh  start_qwen3.5_122b.sh  start_qwen3.5_397b.sh  start_qwen3.6_35b.sh  start_small.sh  test_gemma4_10turn.py
examples/: opencode.json
src/mlx_soloheaven/: __init__.py  __main__.py  cli.py  config.py  server.py
src/mlx_soloheaven/api/: admin.py  chat.py  compaction.py  openai_compat.py  schemas.py  settings.py
src/mlx_soloheaven/cache/: manager.py
src/mlx_soloheaven/engine/: chat_format.py  compaction.py  mlx_engine.py  pld.py  structured.py  thinking.py  tool_parser.py
src/mlx_soloheaven/storage/: database.py
src/mlx_soloheaven/web/: admin.html  app.js  index.html  style.css
tests/: test_cache_match_multipart.py  test_cache_match_thinking.py  test_cache_match_toolcall.py  test_openai_stream_toolcalls.py  test_tool_parser.py
